--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gradient-to-b from-green-900 to-green-700 min-h-screen text-white">
     <header class="py-6">
         <div class="container mx-auto px-4">
-            <img src="/images/srfc-logo.png" alt="Shamrock Rovers FC" class="h-20 mx-auto">
+            <img src="/images/Members2025.png" alt="Shamrock Rovers FC" class="h-20 mx-auto">
         </div>
     </header>
 
@@ -24,7 +24,7 @@
                     <h2 class="text-2xl font-semibold mb-4">Flight Details</h2>
                     <ul class="space-y-3">
                         <li><strong>Departure:</strong> Dublin Airport, February 13th</li>
-                        <li><strong>Return:</strong> Same Day</li>
+                        <li><strong>Return:</strong> Molde Airport, February 14th</li>
                         <li><strong>Match:</strong> Molde FK vs Shamrock Rovers</li>
                         <li><strong>Competition:</strong> UEFA Europa Conference League</li>
                     </ul>
@@ -32,8 +32,8 @@
 
                 <div class="bg-white/20 p-6 rounded-lg">
                     <h2 class="text-2xl font-semibold mb-4">Pricing</h2>
-                    <p class="mb-4">Standard Price: €XXX per person</p>
-                    <p class="text-yellow-300">Members: Check your email for exclusive discount code!</p>
+                    <p class="mb-4">Standard Price: €485 per person</p>
+                    <p class="text-yellow-300">Members: Check your email for exclusive discount code! One coupon per purchase.If you wish to avail of this on multiple tickets for your party, please purchase each ticket separately</p>
                 </div>
 
                 <div class="text-center">
@@ -50,6 +50,7 @@
             <ul class="list-disc list-inside space-y-2">
                 <li>Payment required at time of booking</li>
                 <li>Please ensure your passport is valid for travel</li>
+                <li>Accomodation NOT included</li>
                 <li>Match tickets sold separately</li>
                 <li>Limited seats available</li>
             </ul>
@@ -57,7 +58,7 @@
     </main>
 
     <footer class="container mx-auto px-4 py-8 text-center text-sm">
-        <p>&copy; 2024 Shamrock Rovers FC. All rights reserved.</p>
+        <p>&copy; 2025 Shamrock Rovers MC. All rights reserved.</p>
     </footer>
 
     <script src="/main.js"></script>
