--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <div class="bg-white/20 p-6 rounded-lg">
                     <h2 class="text-2xl font-semibold mb-4">Pricing</h2>
                     <p class="mb-4">Standard Price: €485 per person</p>
-                    <p class="text-yellow-300">Members: Check your email for exclusive discount code! One coupon per purchase.If you wish to avail of this on multiple tickets for your party, please purchase each ticket separately</p>
+                    <p class="text-yellow-300">Members: Check your email for exclusive discount code! One coupon per purchase. If you wish to avail of this on multiple tickets for your party, please purchase each ticket separately</p>
+                    <p class="text-red-300 mt-4 font-semibold">IMPORTANT: One ticket per purchase. You MUST enter the passenger's name EXACTLY as it appears on their passport during checkout.</p>
                 </div>
 
                 <div class="text-center">
